Updating header and footer

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <div class="pre-loader">
         <div class="loading">
             <div class="bounceball"></div>
-            <div class="text">NOW LOADING XDC DEVELOPER PORTAL</div>
+            <div class="text">XDC DEVELOPER PORTAL</div>
         </div>
     </div>
 </div>
