--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
                         <h5 class="footer-title heading-5">Get Help</h5>
                         <ul class="footer-category list-inline">
                             <li><a href="/pages/support">Support</a></li>
-                            <li><a href="/pages/submit-ticket">Supmit Ticket</a></li>
+                            <li><a href="/pages/submit-ticket">Submit Ticket</a></li>
                             <li><a href="/pages/register">Register</a></li>
                             <li><a href="/pages/login">Login</a></li>
                         </ul>
@@ -75,7 +75,7 @@
     <div class="footer-wrapper">
         <div class="container">
             <div class="footer-copyright text-center">
-                <p> &copy; Copyright {{ site.time | date: '%Y' }} {{site.title}} - Designed by <a href="https://themeix.com">Themeix</a></p>
+                <p> &copy; Copyright {{ site.time | date: '%Y' }} {{site.title}} - Designed by <a href="https://xdc.org">XDC Foundation</a></p>
             </div>
         </div>
     </div>
