Adding Discord to Socials in Footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,8 +35,8 @@
                     <div class="footer-widget wow fadeIn" data-wow-duration="4s">
                         <h5 class="footer-title heading-5">Follow Us</h5>
                         <ul class="footer-socials list-inline">
-                            {% if site.behance %}
-                                <li class="list-inline-item"><a href="{{site.behance}}"><i class="fa fa-behance"></i></a></li>
+                            {% if site.discord %}
+                                <li class="list-inline-item"><a href="{{site.discord}}"><i class="fa fa-discord"></i></a></li>
                             {% endif %}
 
                             {% if site.twitter %}
