Trying to get Discord social to load on footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,7 @@
                         <h5 class="footer-title heading-5">Follow Us</h5>
                         <ul class="footer-socials list-inline">
                             {% if site.discord %}
-                                <li class="list-inline-item"><a href="{{site.discord}}"><i class="fa fa-discord"></i></a></li>
+                                <li class="list-inline-item"><a href="{{site.discord}}"><i class="fa fa-twitter"></i></a></li>
                             {% endif %}
 
                             {% if site.twitter %}
