Updating About section of footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,8 @@
             <div class="row">
                 <div class="col-md-6 col-lg-4">
                     <div class="footer-widget wow fadeIn" data-wow-duration="1s">
-                        <h5 class="footer-title heading-5">About Doxy</h5>
-                        <p>Doxy is a minimal support and document based website template. It has all the modern features for the digital product authors who wants to make their product's documentation website.</p>
+                        <h5 class="footer-title heading-5">XDC Community</h5>
+                        <p>xdc.community is a decentralized, public, open source developer portal created and maintained by a global developer community.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-2">
