--- a/_includes/footer_top_area.html
+++ b/_includes/footer_top_area.html
@@ -3,9 +3,9 @@
     <div class="help-wrapper text-center pb-0 section-spacing">
         <div class="container">
             <div class="help-section">
-                <h2 class="heading-2">Still no luck? We can help!</h2>
-                <p>Contact us and we’ll get back to you as soon as possible.</p>
-                <a href="/pages/submit-ticket" class="btn-style3  btn wow flipInX" data-wow-duration="1s">Submit a Request</a>
+                <h2 class="heading-2">Still no luck? Submit an issue!</h2>
+                <p>You can submit an issue in the GitHub repository for this website if you dont feel comfortable making your own pull request.</p>
+                <a href="https://github.com/XDC-Community/XDC-Community.github.io/issues" class="btn-style3  btn wow flipInX" data-wow-duration="1s">Submit an Issue</a>
             </div>
         </div>
     </div>
