Updating Support Area

--- a/_includes/footer_top_area.html
+++ b/_includes/footer_top_area.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="help-section">
                 <h2 class="heading-2">Still no luck? Submit an issue!</h2>
-                <p>You can submit an issue in the GitHub repository for this website if you dont feel comfortable making your own pull request.</p>
+                <p>You can submit an issue in the GitHub repository for this website if you dont feel comfortable making your own pull request, or reach out on social media for help.</p>
                 <a href="https://github.com/XDC-Community/XDC-Community.github.io/issues" class="btn-style3  btn wow flipInX" data-wow-duration="1s">Submit an Issue</a>
             </div>
         </div>
