--- a/_includes/support_area.html
+++ b/_includes/support_area.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="section-title text-center">
             <h2 class="heading-2">Didn't find what you were looking for?</h2>
-            <p>Lacus vestibulum sed arcu non odio euismod lacinia at quis risus sed vulputate odio ut enim blandit</p>
+            <p>This website is built with GitHub Pages, you can fork the repository, add the missing content, and submit a pull request</p>
             </div>
             <div class="row">
                 {% for support in site.data.supports %}
