--- a/_includes/call_to_action.html
+++ b/_includes/call_to_action.html
@@ -5,13 +5,13 @@
             <div class="row">
                 <div class="col-md-8 col-lg-9">
                     <div class="help-section white-text">
-                        <h2 class="heading-2">Do you have any question to us? Call Us</h2>
-                        <p class="m-0">Contact us and we’ll get back to you as soon as possible.</p>
+                        <h2 class="heading-2">Do you want to contribute? Create a GitHub account</h2>
+                        <p class="m-0">Create a GitHub account and you can directly contribute to the XDC Community Developer Portal.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-3 d-flex themeix-highlight  justify-content-md-end justify-content-center">
                     <div class="help-btn align-self-center themeix-highlight">
-                        <a href="/pages/contact" class="btn-style3 btn">Contact Us</a></div>
+                        <a href="https://github.com/" class="btn-style3 btn">Join GitHub</a></div>
                 </div>
             </div>
 
