Shortened call to action

--- a/_includes/call_to_action.html
+++ b/_includes/call_to_action.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-md-8 col-lg-9">
                     <div class="help-section white-text">
-                        <h2 class="heading-2">Do you want to contribute? Create a GitHub account</h2>
+                        <h2 class="heading-2">Do you want to contribute?</h2>
                         <p class="m-0">Create a GitHub account and you can directly contribute to the XDC Community Developer Portal.</p>
                     </div>
                 </div>
