--- a/_includes/blog_and_items.html
+++ b/_includes/blog_and_items.html
@@ -1,10 +1,10 @@
-<!-- Start Pupolar Article  Area -->
+<!-- Start Popular Article  Area -->
 <section class="pupolar-article-area bg-color3">
     <div class="pupolar-article-wrapper  section-spacing bminus-30">
         <div class="container">
             <div class="section-title">
-                <h2 class="heading-2"> Blog & Items</h2>
-                <p>Vulputate odio ut enim blandit volutpat maecenas volutpat blandit </p>
+                <h2 class="heading-2"> Community Voice</h2>
+                <p>The community is invited to write articles and publish them on xdc.community through pull requests </p>
             </div>
             <div class="row">
                 <div class="col-md-6 col-lg-8">
@@ -14,7 +14,7 @@
                                 <div class="popular-logo-icon"><img src="{{ '/assets/images/popular-2.png' | relative_url }}" alt="service icon"></div>
                             </div>
                             <div class="popular-top-title">
-                                <h5 class="heading-5">Recent Blogs</h5>
+                                <h5 class="heading-5">Recent Articles</h5>
                             </div>
                         </header>
                         <ul class="popular-article-list list-inline">
@@ -31,7 +31,7 @@
                                 <div class="popular-logo-icon"><img src="{{ '/assets/images/popular-3.png' | relative_url }}" alt="service icon"></div>
                             </div>
                             <div class="popular-top-title">
-                                <h5 class="heading-5">Treding Items</a></h5>
+                                <h5 class="heading-5">Community Links</a></h5>
                             </div>
                         </header>
                         <ul class="popular-item-list list-inline">
@@ -45,4 +45,4 @@
         </div>
     </div>
 </section>
-<!-- End Pupolar Article Area -->
+<!-- End Popular Article Area -->
