--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="navigation-box">
                 <div class="navigation-left">
-                    <a class="header-logo" href="{{ https://www.xdc.community/ | absolute_url }}"><img src="{{ '/assets/images/header-logo.png' | relative_url }}" alt="header logo"></a>
+                    <a class="header-logo" href="{{ / | relative_url }}"><img src="{{ '/assets/images/header-logo.png' | relative_url }}" alt="header logo"></a>
                 </div>
                
 					
